--- a/css/app.css
+++ b/css/app.css
@@ -944,4 +944,12 @@
       transform: scale(0.45);
     }
   
-   
+    .logo {
+      top: -39px;
+      left: 172px;
+    }
+  }
+  
+  .no-click{
+    pointer-events: none;
+  }
